# learning-llm-agents

./: .env.example  .gitignore  LEARNING_PLAN.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  t.md
.github/workflows/: deploy-docs.yml
notes/: auto-research-agent.html  conceptual-qa.html  conceptual-qa.md  dogfood-stage2.html  engineering-practice.html  journal.md  phase1-pattern-guide.html
phase1_patterns/: README.md  test.ipynb
phase1_patterns/01_augmented_llm/: README.md  eval_baseline.json  eval_latest.json  eval_set.py  ex1_materials.py  ex2_calculator.py  main.py  run_eval.py  tools.py
phase1_patterns/02_tool_loop/: README.md  demo.py
phase1_patterns/03_routing/: README.md  demo.py
phase1_patterns/04_plan_execute/: README.md  demo.py
phase1_patterns/05_reflection/: README.md  demo.py
phase2_project/: README.md
phase2_project/paper_qa/: ARCHITECTURE.md  agent.py  eval_baseline.json  eval_latest.json  eval_set.py  eval_v2_qwen-plus_baseline.json  run_eval.py  tools.py
phase2_project/paper_qa/dogfood/: questions.py  results.json  run.py
phase2_project/paper_qa/stage2/: agent_stage2.py  eval_stage2.json  indexer.py  retriever.py  run_eval.py  verify_citations.py
phase2_project/paper_qa/tests/: conftest.py  (+2 more)
reports/: report_2026-05-12_agent-lab-bootstrap.md  report_2026-05-13_phase1-pattern01.md  report_2026-05-13_publish-public-repo.md  report_2026-05-13_smoke-verification.md
shared/: llm.py
shared/eval/: __init__.py  instrumented.py  reporting.py  runner.py  scoring.py  types.py
smoke_test/: 01_hello.py  02_tool_use.py  03_caching.py
(+6 files in other folders)
