[project]
name = "learning-llm-agents"
version = "0.1.0"
description = "A hands-on plan for learning to build LLM agents from scratch."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "langfuse>=4.6.1",
    "openai>=2.36.0",
    "python-dotenv>=1.2.2",
]
