[project]
name = "learning-llm-agents"
version = "0.1.0"
description = "A hands-on plan for learning to build LLM agents from scratch."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "langfuse>=4.6.1",
    "openai>=2.36.0",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
